[package]
name = "bevy_tileset_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_ecs_tilemap = { version = "0.9.0", features = ["atlas", "render"] }
bevy_tileset = { version = "0.6.0", features = ["auto-tile", "variants"] }
bimap = "0.6.2"
rand = "0.8.5"
